--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -26,9 +26,7 @@ jobs:
             -H 'Content-Type: application/json' \
             "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases"
           RELEASE_ID=$(curl -svL https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/tags/$RELEASE_TAG | jq .id)
-          ls -lah /
-          ls -lah /rep/
-          cd /rep/cc65
+          cd $PWD/cc65
           RELEASE_FILE="cc65.zip"
           curl -sL -XPOST -T ${RELEASE_FILE}* \
             -H "Authorization: token $GITHUB_TOKEN" \
