--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -14,8 +14,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Build toolchain
         run: |
-             chmod +x assembly.sh
-             docker run --rm -v $PWD:/rep --entrypoint sh ubuntu /rep/assembly.sh
+             sudo apt update
+             sudo apt install -y make gcc git zip
+             git clone https://github.com/cc65/cc65
+             cd cc65
+             make all zip
       - name: publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -26,6 +29,8 @@ jobs:
             -H 'Content-Type: application/json' \
             "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases"
           RELEASE_ID=$(curl -svL https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/tags/$RELEASE_TAG | jq .id)
+          ls -lah /
+          echo $PWD
           cd cc65
           RELEASE_FILE="cc65.zip"
           curl -sL -XPOST -T ${RELEASE_FILE}* \
